<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <android.support.v4.widget.ContentLoadingProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        style="?android:attr/progressBarStyleSmall">
    </android.support.v4.widget.ContentLoadingProgressBar>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/product_etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/text_name"
                android:backgroundTint="@color/colorGray"
                android:typeface="serif"
                android:textStyle="bold"
                android:imeOptions="actionNext"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorBlack" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/product_etDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/text_description"
                android:backgroundTint="@color/colorGray"
                android:typeface="serif"
                android:textStyle="bold"
                android:imeOptions="actionNext"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorBlack" />

        </android.support.design.widget.TextInputLayout>



        <android.support.design.widget.TextInputLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/product_etPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/text_price"
                android:backgroundTint="@color/colorGray"
                android:typeface="serif"
                android:inputType="number"
                android:textStyle="bold"
                android:imeOptions="actionNext"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorBlack" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/product_etQuantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/text_quantity"
                android:backgroundTint="@color/colorGray"
                android:typeface="serif"
                android:inputType="number"
                android:textStyle="bold"
                android:imeOptions="actionNext"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorBlack" />

        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/product_btnCreate"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginTop="40dp"
            android:background="@color/colorGray"
            android:onClick="buttonOnClick"
            android:text="@string/create_button"
            android:typeface="serif"
            android:enabled="false"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/colorWhite"
            android:textStyle="bold" />


</LinearLayout>
